quiz5/ingress-q.yaml
apiVersion: v1
kind: Namespace
metadata: 
  name: quiz5
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: example-ingress
  namespace: quiz5 
  annotations: 
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec: 
  rules:
  - http: 
      paths: 
      - path: / 
        pathType: Prefix 
        backend: 
          service: 
            name: testnginx
            port: 
              number: 80
      - path: /http 
        pathType: Prefix 
        backend: 
          service: 
            name: testhttpd-service 
            port: 
              number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: quiz5      
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      name: my-webserver
      labels:
        app: webserver
    spec:
      containers:
      - name: my-webserver
        image: nginx:1.10
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: testnginx
  namespace: quiz5
spec:
  ports:
  - name: web-port
    port: 80
    targetPort: 80
  selector:
    app: webserver
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: quiz5
  name: http-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: httpserver
  template:
    metadata:
      name: my-httpserver
      labels:
        app: httpserver
    spec:
      containers:
      - name: my-httpserver
        image: httpd
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: testhttpd-service
  namespace: quiz5
spec:
  ports:
  - name: http-port
    port: 80
    targetPort: 80
  selector:
    app: httpserver
  type: NodePort
